ID:3311233	Update demographic import/export
- added "other_id" key to measurementsExt for import/export of lab annotation
- additional error message for duplicate patient import
- corrected prescription display for drugform & patient compliance

Change-Id: I468f9e4a4f143cc27cf88b0abff57d264ac13d42